# CivitAi_Deamon

./: .gitignore  Curl_test.md  MIGRATION_PLAN.md  PROJECT_STRUCTURE.md  README.md  README_advanced.md  TODO_backend.md  TODO_frontend_search.md  config.example.json  daemon.py  database.py  install.py  launch.py  logger.py  main.py  pyproject.toml  remove.py  sample_responce.txt  setup.sh  test_manifest.json  test_manifest_invalid.json  updater.py  webhook_launcher.py  webhook_server.py
backend/: daemon.py  database.py  launch.py  main.py  updater.py  webhook_launcher.py  webhook_server.py
backend/notebook/: test_live_download_progress.ipynb
backend/static/: client.js
backend/templates/: gui.html
configs/: test_manifest.json  test_manifest_invalid.json
frontend/: launch.py  main.py  search.py
frontend/static/: Modelmanager.js  index.html  jwt-decode.min.js  search.css  search.js
frontend/static/ui/: batchControls.js  escapeHtml.js  flattenModels.js  renderApp.js  renderFilters.js  renderResults.js  ws-ui.js
frontend/templates/: search.html
static/: client.js
systemd/: civitai-daemon.service
templates/: gui.html
tests/: test_admin_api.py  test_api.py  test_api_edge_cases.py  test_daemon.py  test_database.py  test_integration_download.py  test_manifest.py  test_port_config.py  test_websocket.py
utils/: logger.py
