
[tool.poetry]
name = "civitai-daemon"
version = "0.1.0"
description = "Stable Civitai Download Daemon"
authors = ["Grandmasg <info@grandmasg.nl>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
httpx = "*"
jinja2 = "*"
sqlite-utils = "*"
python-multipart = "*"
apscheduler = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
